[project]
name = "mikutts2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "edge-tts>=7.2.3",
    "fastapi>=0.118.0",
    "librosa>=0.11.0",
    "numpy>=1.23.5",
    "piper-tts>=1.3.0",
    "pydantic>=2.11.10",
    "requests>=2.32.5",
    "rvc-python>=0.1.5",
    "scipy>=1.15.3",
    "soundfile>=0.13.1",
    "urllib3>=2.5.0",
    "uvicorn[standard]>=0.37.0",
]
